next
[*] Some methods are now protected.
[*] Added $with to findAllByTags().
[+] getAllTags().
[+] Unit tests.
[+] createTagsAutomatically option allows to throw exception when adding nonexisting tag. 

0.6
[+] Initial public release.