@@ -1,4 +1,11 @@
 next
+Warning: this version is not backwards compatible to 0.6.
+
+[+] New syntax: echo $post->tags (or by what name behaviour is attached) will print comma separated tags.
+[*] getTags now returns array since implode is really easy to do yourself.
+[-] Removed getTagsArray().
+[*] addTags(), removeTags(), setTags(), findAllByTags(), getCountByTags() are now accept both string and array. 
+[+] Added addTag() as alias of addTags(), removeTag() as alias of removeTags().
 [*] Some methods are now protected.
 [*] Added $with to findAllByTags().
 [+] getAllTags().
